--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1157,7 +1157,7 @@ section.lazy-placeholder:after {
 }
 .cid-s7yfZ4bhxH {
   padding-top: 45px;
-  padding-bottom: 90px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-s7yfZ4bhxH .mbr-slider .carousel-control {
@@ -1187,11 +1187,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #424a4d) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7yfZ4bhxH .mbr-gallery-item > div {
   position: relative;
@@ -1220,11 +1220,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #424a4d) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7yNqT8X4n {
   padding-top: 15px;
@@ -3271,11 +3271,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #424a4d) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IRZaubUm .mbr-gallery-item > div {
   position: relative;
@@ -3293,7 +3293,7 @@ section.lazy-placeholder:after {
   width: 100%;
   bottom: 0;
   padding: 1rem;
-  color: #fff;
+  color: #ffffff;
   z-index: 2;
 }
 .cid-s7IRZaubUm .mbr-gallery-title:before {
@@ -3304,11 +3304,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #424a4d) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7ISilrxkR {
   padding-top: 30px;
@@ -3365,11 +3365,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #b6b6b6) !important;
 }
 .cid-s7ISu1XOWV .mbr-gallery-item > div {
   position: relative;
@@ -3398,15 +3398,15 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #b6b6b6) !important;
 }
 .cid-s7ISEEKW08 {
   padding-top: 15px;
-  padding-bottom: 90px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-s7ISEEKW08 .mbr-slider .carousel-control {
@@ -3436,11 +3436,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7ISEEKW08 .mbr-gallery-item > div {
   position: relative;
@@ -3458,7 +3458,7 @@ section.lazy-placeholder:after {
   width: 100%;
   bottom: 0;
   padding: 1rem;
-  color: #fff;
+  color: #ffffff;
   z-index: 2;
 }
 .cid-s7ISEEKW08 .mbr-gallery-title:before {
@@ -3469,11 +3469,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IViNMmep .navbar {
   background: #f6f6f6;
@@ -3977,11 +3977,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IViPu8R2 .mbr-gallery-item > div {
   position: relative;
@@ -4010,11 +4010,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IViQlm4o {
   padding-top: 30px;
@@ -4071,11 +4071,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IViQGf5o .mbr-gallery-item > div {
   position: relative;
@@ -4104,11 +4104,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IViRqlfU {
   padding-top: 15px;
@@ -4142,11 +4142,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IViRqlfU .mbr-gallery-item > div {
   position: relative;
@@ -4175,11 +4175,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IV65bdM4 .navbar {
   background: #f6f6f6;
@@ -4683,11 +4683,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #f6f6f6;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #f6f6f6, #000000) !important;
 }
 .cid-s7IV6751LW .mbr-gallery-item > div {
   position: relative;
@@ -4716,11 +4716,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #f6f6f6 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #f6f6f6, #000000) !important;
 }
 .cid-s7IV67QQM6 {
   padding-top: 30px;
@@ -4777,11 +4777,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IV68oNTO .mbr-gallery-item > div {
   position: relative;
@@ -4810,11 +4810,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IV69amV2 {
   padding-top: 15px;
@@ -4848,11 +4848,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #f6f6f6;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #f6f6f6, #000000) !important;
 }
 .cid-s7IV69amV2 .mbr-gallery-item > div {
   position: relative;
@@ -4881,11 +4881,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #f6f6f6 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #f6f6f6, #000000) !important;
 }
 .cid-s7IVjENdvB .navbar {
   background: #f6f6f6;
@@ -5389,11 +5389,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IVjGjOwb .mbr-gallery-item > div {
   position: relative;
@@ -5422,11 +5422,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IVjH4Mz7 {
   padding-top: 30px;
@@ -5483,11 +5483,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IVjHobFQ .mbr-gallery-item > div {
   position: relative;
@@ -5516,11 +5516,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IVjHZU3F {
   padding-top: 15px;
@@ -5554,11 +5554,11 @@ section.lazy-placeholder:after {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #554346;
+  background: #000000;
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7IVjHZU3F .mbr-gallery-item > div {
   position: relative;
@@ -5587,11 +5587,11 @@ section.lazy-placeholder:after {
   left: 0;
   z-index: -1;
   position: absolute;
-  background: #554346 !important;
+  background: #000000 !important;
   opacity: 0.5;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
 }
 .cid-s7ydfEY7Ps .navbar {
   background: #f6f6f6;
