create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1358,59 +1358,18 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-s7IsXnWWSI {
-  padding-top: 90px;
+.cid-sb7ftAEQDY {
+  padding-top: 30px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-s7IsXnWWSI div.b {
-  padding-top: 2rem;
-}
-.cid-s7IsXnWWSI .mbr-text {
-  color: #149dcc;
+.cid-sb7ftAEQDY .mbr-text {
+  color: #767676;
   margin: 0;
   padding-top: 1.5rem;
 }
-.cid-s7IsXnWWSI a:not([href]):not([tabindex]) {
-  color: #fff;
-  border-radius: 3px;
-}
-.cid-s7IsXnWWSI .google-map {
-  height: 24rem;
-  position: relative;
-}
-.cid-s7IsXnWWSI .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-.cid-s7IsXnWWSI .google-map [data-state-details] {
-  color: #6b6763;
-  font-family: Montserrat;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-s7IsXnWWSI .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-s7IsXnWWSI .google-map[data-state="loading"] [data-state-details] {
-  display: none;
-}
-.cid-s7IsXnWWSI div.left-block.wrapper {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-@media (max-width: 767px) {
-  .cid-s7IsXnWWSI div.left-block.wrapper {
-    padding-bottom: 3rem;
-  }
+.cid-sb7ftAEQDY div.b {
+  padding-top: 2rem;
 }
 .cid-s7IxZ34V4h {
   padding-top: 0px;
