--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1155,6 +1155,80 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-sbjKHlZQ5A {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.cid-sbjKHlZQ5A .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-sbjKHlZQ5A .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-sbjKHlZQ5A .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-sbjKHlZQ5A .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-sbjKHlZQ5A .row > .row {
+  display: block;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-item {
+  width: 100%;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-item > div {
+  position: relative;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+  text-align: center;
+}
+.cid-sbjKHlZQ5A .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #000000 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #000000, #f6f6f6) !important;
+}
 .cid-s7yfZ4bhxH {
   padding-top: 45px;
   padding-bottom: 45px;
