--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5782,68 +5782,6 @@ section.lazy-placeholder:after {
     padding-top: 1rem;
   }
 }
-.cid-sbjRbVXiVs {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #f6f6f6;
-}
-.cid-sbjRbVXiVs .socicon-bg-facebook {
-  background: #3e5b98;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .socicon-bg-twitter {
-  background: #4da7de;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .socicon-bg-googleplus {
-  background: #dd4b39;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .socicon-bg-vkontakte {
-  background: #5a7fa6;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .socicon-bg-odnoklassniki {
-  background: #f48420;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .socicon-bg-pinterest {
-  background: #c92619;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .socicon-bg-mail {
-  background: #134785;
-  color: #ffffff;
-}
-.cid-sbjRbVXiVs .btn-social {
-  font-size: 20px;
-  border-radius: 50%;
-  padding: 0;
-  width: 44px;
-  height: 44px;
-  line-height: 44px;
-  text-align: center;
-  position: relative;
-  cursor: pointer;
-  border: none !important;
-}
-.cid-sbjRbVXiVs .btn-social i {
-  top: 0;
-  line-height: 44px;
-  width: 44px;
-}
-.cid-sbjRbVXiVs .btn-social + .btn {
-  margin-left: .1rem;
-}
-.cid-sbjRbVXiVs [class^="socicon-"]:before,
-.cid-sbjRbVXiVs [class*=" socicon-"]:before {
-  line-height: 44px;
-}
-@media (max-width: 767px) {
-  .cid-sbjRbVXiVs .btn {
-    font-size: 20px !important;
-  }
-}
 .cid-s7ydfEY7Ps .navbar {
   background: #f6f6f6;
   transition: none;
@@ -6574,6 +6512,48 @@ section.lazy-placeholder:after {
 }
 .cid-s7yjGH0JAR .card-title {
   text-align: left;
+}
+.cid-sbkNuwXdkQ {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-sbkNuwXdkQ [class^="socicon-"]:before,
+.cid-sbkNuwXdkQ [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+.cid-sbkNuwXdkQ .btn-social {
+  font-size: 20px;
+  border-radius: 50%;
+  padding: 0;
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  text-align: center;
+  position: relative;
+  color: #232323;
+  cursor: pointer;
+  border-color: #149dcc;
+}
+.cid-sbkNuwXdkQ .btn-social i {
+  top: 0;
+  line-height: 44px;
+  width: 44px;
+}
+.cid-sbkNuwXdkQ .btn-social:hover {
+  color: #fff;
+  background: #149dcc;
+}
+.cid-sbkNuwXdkQ .btn-social:hover i.socicon {
+  color: #ffffff !important;
+}
+.cid-sbkNuwXdkQ .btn-social + .btn {
+  margin-left: .1rem;
+}
+@media (max-width: 767px) {
+  .cid-sbkNuwXdkQ .btn {
+    font-size: 20px !important;
+  }
 }
 .cid-s7IAO7Rz4m {
   padding-top: 30px;
